fix(menu): overlay on mobile

--- a/assets/styles/vars.sass
+++ b/assets/styles/vars.sass
@@ -8,3 +8,4 @@ $header-height: 60px
 
 :root
   --header-offset: #{$header-height + $header-offset}
+  --menu-width: 17em
